[project]
name = "mineru-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "mineru[pipeline]>=3.1.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
]
